--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,5 @@
 body {
     height: 100%;
-    overflow: hidden;
     display: flex;
     box-sizing: border-box;
     background-color: aqua;
@@ -8,9 +7,9 @@ body {
 }
 
 .col {
-    height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 15px;
 }
 
 .row {
@@ -21,8 +20,10 @@ body {
 
 /***** HEADER *****/
 header {
+    border-bottom: 1px  solid black;
     display: flex;
     flex-direction: row;
+
 }
 
 #navigation {
@@ -35,7 +36,9 @@ header {
 }
 
 #site {
-    
+    display: flex;
+    align-items: stretch;
+    min-height: 600px;
 }
 
 #content {
@@ -43,11 +46,13 @@ header {
 }
 
 #option-panel {
+    border-right: 1px solid black;
+    min-width: 350px;
 
 }
 
 #footer {
-    
+    border-top: 1px solid black;
 }
 
 
