--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,6 +5,8 @@ body {
     background-color: aqua;
     flex-direction: column;
     overflow:hidden;
+    font-family:'Roboto',sans-serif;
+    font-weight:400;
 }
 
 .col {
@@ -31,6 +33,10 @@ header {
     list-style: none;
 }
 
+.info-box {
+    margin-top: 25px;
+}
+
 .nav-link {
     display: inline-flex;
     padding: 15px;
@@ -50,7 +56,7 @@ header {
     background-position: center; 
     background-repeat: no-repeat;
     background-size: cover; 
-    width: 400px;
+    min-width: 200px;
 }
 .sport-items-container {
     background-color: blueviolet;
@@ -58,6 +64,7 @@ header {
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    height: 500px;
 }
 .sport-item {
     border-bottom: 1px solid black;
@@ -70,9 +77,24 @@ header {
     border-bottom: none;
 }
 
+
+.sport-item-attributes {
+    margin-left: 15px;
+}
+
 .sport-item-attribute {
     display: flex;
     flex-direction: row;
+}
+
+.sport-item-attribute-label {
+    font-weight: 500;
+    text-transform: lowercase;
+    min-width: 200px;
+    margin-bottom: 10px;
+}
+.sport-item-attribute-label:first-letter {
+    text-transform: uppercase;
 }
 
 #option-panel {
